- https://github.com/eclipse-sirius/sirius-web/issues/2790[#2790] [diagram] Increase the size of the handles used to resize a node.
+
.Old resize handles vs new ones
image:doc/screenshots/biggerResizeHandles.png[Compartment with header without separator,70%]
- https://github.com/eclipse-sirius/sirius-web/issues/2849[#2849] [diagram] Reduce the time taken to open a diagram

== v2023.12.0

=== Shapes

- Add support for custom nodes in Diagram representations
- Add the possibility to specify a size ratio on node.
- Add support for rotatable border node
- Improve handles management in React Flow based diagrams

=== Architectural decision records

- [ADR-111] Add support for image overlay
- [ADR-112] Provide only valid view descriptions to the renderer
- [ADR-113] Add support for multiple IObjectService
- [ADR-114] Add support for multiple IEditService
- [ADR-115] Split the Sirius Web frontend
- [ADR-116] Add support for changing the content of the explorer
- [ADR-117] Add support for changing the content of the details view
- [ADR-118] Use dynamic handles to connect edges between nodes
- [ADR-119] Share layout data between subscribers
- [ADR-120] Improve the arrange all action with reactflow
- [ADR-121] Add process before and after input handling

=== Breaking changes

- https://github.com/eclipse-sirius/sirius-web/issues/2386[#2386] [form] Reference widget structure has changed, `referenceOptions` has been removed to be lazily loaded.
- https://github.com/eclipse-sirius/sirius-web/issues/2329[#2335] [form] The general mutation `editReference` has been removed from the reference widget. This mutation has been replaced by finer grain mutations:
** _clearReference_ mutation: to reset the content references (set the value to `null` for mono-valued references and to an empty list for multi-valued ones).
** _addReferenceValues_ mutation: to several reference values to a reference (only used with multi-valued references)